@@ -1,5 +1,6 @@
 package fr.uga.l3miage.integrator.cyberCommandes.services;
 
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.when;
 
@@ -7,7 +8,12 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import fr.uga.l3miage.integrator.cyberCommandes.mappers.TourneeMapper;
 import fr.uga.l3miage.integrator.cyberCommandes.models.JourneeEntity;
+import fr.uga.l3miage.integrator.cyberCommandes.repositories.JourneeRepository;
+import fr.uga.l3miage.integrator.cyberCommandes.repositories.TourneeRepository;
+import fr.uga.l3miage.integrator.cyberCommandes.request.TourneeCreationRequest;
+import fr.uga.l3miage.integrator.cyberCommandes.response.TourneeCreationResponseDTO;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabase;
@@ -24,8 +30,14 @@ import fr.uga.l3miage.integrator.cyberCommandes.response.TourneeResponseDTO;
 public class TourneeServiceTest {
     @Autowired 
     private TourneeService tourneeService;
+
     @MockBean
     private TourneeComponent tourneeComponent;
+
+    @MockBean
+    private JourneeRepository journeeRepository;
+
+
 
 
     @Test 
@@ -59,9 +71,7 @@ public class TourneeServiceTest {
         // Configuration du mock pour retourner la liste simulée lorsque findAllTournee est appelé
         when(tourneeComponent.findAllTournee()).thenReturn(tourneeEntities);
 
-        // Configuration du mock pour retourner la liste simulée lorsque findAllTourneesByEtat est appelé avec ENCHARGEMENT
-        List<TourneeEntity> tourneesEnChargement = Arrays.asList(tourneeEntity1, tourneeEntity2);
-        when(tourneeComponent.findAllTourneesByEtatOrReferenceJournee(EtatsDeTournee.ENCHARGEMENT,null)).thenReturn(tourneesEnChargement);
+        when(tourneeComponent.findAllTourneesByEtatOrReferenceJournee(EtatsDeTournee.ENCHARGEMENT,null)).thenReturn(List.of(tourneeEntity1, tourneeEntity2));
 
         when(tourneeComponent.findAllTourneesByEtatOrReferenceJournee(null,journee1.getReference())).thenReturn(List.of(tourneeEntity1));
 
@@ -96,5 +106,53 @@ public class TourneeServiceTest {
 
     }
 
+    @Test
+    void CreatTourneeSuccess() {
+        // On cree une tournée creation request avec une distance, une référence et un état
+        TourneeCreationRequest tourneeCreationRequest1 = TourneeCreationRequest.builder()
+                .distance(7.00)
+                .etat(EtatsDeTournee.EFFECTUEE)
+                .reference("T1")
+                .build();
+        // On cree une tournée creation avec une référence et un état
+        TourneeCreationRequest tourneeCreationRequest2 = TourneeCreationRequest.builder()
+                .distance(5.00)
+                .etat(EtatsDeTournee.EFFECTUEE)
+                .reference("T2")
+                .build();
+        // On crée une liste de requêtes de création de tournée
+        List<TourneeCreationRequest> tourneeCreationRequests = Arrays.asList(tourneeCreationRequest1,
+                tourneeCreationRequest2);
+        // On crée une journée
+        JourneeEntity journee1 = JourneeEntity.builder()
+                .reference("1Ab")
+                .build();
+
+        TourneeEntity tourneeEntity1 = TourneeEntity.builder()
+                .reference("T1")
+                .etat(EtatsDeTournee.EFFECTUEE)
+                .distance(5.00)
+                .build();
+
+        TourneeEntity tourneeEntity2 = TourneeEntity.builder()
+                .distance(5.00)
+                .etat(EtatsDeTournee.EFFECTUEE)
+                .reference("T2")
+                .build();
+
+
+        when(journeeRepository.findByReference(journee1.getReference())).thenReturn(journee1); // On retourne la journée simulée lorsque findByReference est appelé
+        when(tourneeComponent.createTournees(List.of(tourneeEntity1, tourneeEntity2))).thenReturn(List.of(tourneeEntity1, tourneeEntity2));
+
+        TourneeCreationResponseDTO tourneeCreationResponseDTO = tourneeService.createTournee(
+                tourneeCreationRequests,
+                journee1.getReference()
+        ); // On appelle la méthode à tester
+
+
+        assertThat(tourneeCreationResponseDTO.isSuccess()).isTrue();
+        assertThat(tourneeCreationResponseDTO.getMessage()).isEqualTo("Toutes les tournées ont été créés avec succès");
+
+    }
 
 }
